force-app/main/default/objects/Customer/fields/CEP__c.field-meta.xml
<CustomField>
    <fullName>CEP__c</fullName>
    <inlineHelpText>Digite somente números</inlineHelpText>
    <label>CEP</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>