force-app/main/default/objects/Customer/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <label>Cidade</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>