force-app/main/default/objects/Customer/fields/Complemento__c.field-meta.xml
<CustomField>
    <fullName>Complemento__c</fullName>
    <label>Complemento</label>
    <length>25</length>
    <type>Text</type>
</CustomField>