force-app/main/default/objects/Customer/fields/Cpf__c.field-meta.xml
<CustomField>
    <fullName>Cpf__c</fullName>
    <inlineHelpText>Digite somente números</inlineHelpText>
    <label>Cpf</label>
    <length>11</length>
    <type>Text</type>
</CustomField>