force-app/main/default/objects/Customer/fields/Data_do_cadastro__c.field-meta.xml
<CustomField>
    <fullName>Data_do_cadastro__c</fullName>
    <defaultValue>DATETIMEVALUE(Now())</defaultValue>
    <label>Data do cadastro</label>
    <type>DateTime</type>
</CustomField>