force-app/main/default/objects/Customer/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <inlineHelpText>Insira o e-mail do cliente para que sejam enviados informaçoes sobre produtos e futuras compras</inlineHelpText>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>