force-app/main/default/objects/Customer/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <inlineHelpText>Ex: Rua, SalesForce CA</inlineHelpText>
    <label>Logradouro</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>