force-app/main/default/objects/Customer/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>