force-app/main/default/objects/Customer/fields/Sobrenome__c.field-meta.xml
<CustomField>
    <fullName>Sobrenome__c</fullName>
    <inlineHelpText>Sobrenome do cliente</inlineHelpText>
    <label>Sobrenome</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>