force-app/main/default/objects/Customer/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <inlineHelpText>Insira o Telefone do cliente</inlineHelpText>
    <label>Telefone</label>
    <type>Phone</type>
</CustomField>